[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/ui/arena/_ArenaSheepCounter.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/ui/arena/_ArenaTimer.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/ui/arena/_ArenaPopupMessage.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/ui/arena/arena_ui.gd" type="Script" id=4]

[node name="ArenaUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 984.0
margin_bottom = 560.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TopHBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 984.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 80 )
mouse_filter = 2
size_flags_horizontal = 3

[node name="LeftBox" type="CenterContainer" parent="MarginContainer/VBoxContainer/TopHBox"]
margin_right = 325.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
mouse_filter = 2
size_flags_horizontal = 3

[node name="ArenaTimer" parent="MarginContainer/VBoxContainer/TopHBox" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_right = 0.0
margin_left = 329.0
margin_right = 654.0
margin_bottom = 100.0

[node name="ArenaSheepCounter" parent="MarginContainer/VBoxContainer/TopHBox" instance=ExtResource( 1 )]
margin_left = 658.0
margin_right = 984.0
margin_bottom = 100.0
mouse_filter = 2

[node name="CentralPadding" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 984.0
margin_bottom = 330.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ArenaPopupMessage" parent="MarginContainer/VBoxContainer" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 334.0
margin_right = 984.0
margin_bottom = 560.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
